Fix z-index on animation

--- a/blocks/color-effects/editor.scss
+++ b/blocks/color-effects/editor.scss
@@ -18,8 +18,4 @@
 		max-width: 290px;
 		width: 100%;
 	}
-
-	canvas {
-		z-index: 0;
-	}
 }
