--- a/blocks/color-effects/style.scss
+++ b/blocks/color-effects/style.scss
@@ -27,6 +27,7 @@
 	&__inner-container {
 		width: calc( 100% - 70px );
 		padding: 2rem 0;
+		z-index: 1;
 	}
 
 	// Apply max-width to floated items that have no intrinsic width
@@ -47,6 +48,5 @@
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		z-index: -1;
 	}
 }
